<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_UserType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView_UserName"
            android:paddingLeft="5dip"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_User_Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_UserName"
            android:paddingTop="10dip"
            android:text="@string/main_text_user_status"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_User_Status_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_UserName"
            android:layout_toRightOf="@+id/textView_User_Status"
            android:paddingTop="10dip"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_Email_Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_User_Status"
            android:paddingTop="10dip"
            android:text="@string/main_text_email_status"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_Email_Status_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_User_Status"
            android:layout_toRightOf="@+id/textView_Email_Status"
            android:paddingTop="10dip"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_Cellphone_Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_Email_Status"
            android:paddingTop="10dip"
            android:text="@string/main_text_cellphone_status"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_Cellphone_Status_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_Email_Status"
            android:layout_toRightOf="@+id/textView_Cellphone_Status"
            android:paddingTop="10dip"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dip" >

        <Button
            android:id="@+id/button_Goto_Detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:text="@string/main_btn_goto_detail" />

        <Button
            android:id="@+id/button_Goto_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:text="@string/main_btn_goto_password" />

        <Button
            android:id="@+id/button_Goto_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:text="@string/main_btn_goto_email" />

        <Button
            android:id="@+id/button_Goto_Cellphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:text="@string/main_btn_goto_cellphone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_Goto_Info"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_goto_info" />

        <Button
            android:id="@+id/button_Goto_Domain"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_goto_domain" />

        <Button
            android:id="@+id/button_Exit"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_exit" />
    </LinearLayout>

</LinearLayout>